[build-system]
requires = [
  "setuptools>=80",
  "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "msgspec"
dynamic = [
  "version",
]
description = "A fast serialization and validation library, with builtin support for JSON, MessagePack, YAML, and TOML."
readme = "README.md"
license = "BSD-3-Clause"
license-files = [
  "LICENSE",
]
requires-python = ">=3.9"
maintainers = [
  { name = "Jim Crist-Harif", email = "jcristharif@gmail.com" },
  { name = "Ofek Lev", email = "oss@ofek.dev" },
]
keywords = [
  "JSON",
  "MessagePack",
  "TOML",
  "YAML",
  "msgpack",
  "schema",
  "serialization",
  "validation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
  "msgspec[doc,test]",
  "coverage",
  "mypy",
  "pre-commit",
  "pyright",
]
doc = [
  "furo",
  "ipython",
  "sphinx",
  "sphinx-copybutton",
  "sphinx-design",
]
test = [
  "msgspec[toml,yaml]",
  "attrs",
  "eval-type-backport ; python_version < '3.10'",
  "msgpack",
  "pytest",
]
toml = [
  "tomli ; python_version < '3.11'",
  "tomli_w",
]
yaml = [
  "pyyaml",
]

[project.urls]
Homepage = "https://jcristharif.com/msgspec/"
"Issue Tracker" = "https://github.com/jcrist/msgspec/issues"
Source = "https://github.com/jcrist/msgspec"

[dependency-groups]
bench = [
  "cattrs==25.3.0",
  "mashumaro==3.17",
  "msgpack==1.1.2",
  "orjson==3.11.4",
  "ormsgpack==1.11.0",
  "pydantic==2.12.4",
  "python-rapidjson==1.22",
  "pysimdjson==7.0.2",
  "requests",
  "ujson==5.11.0",
]
dev = [
  "rust-just",
]
doc = [
  "furo",
  "ipython",
  "sphinx",
  "sphinx-copybutton",
  "sphinx-design",
]
hooks = [
  "codespell==2.4.1",
  "prek>=0.2.13",
  "ruff==0.14.1",
]
prof = [
  "memray; sys_platform != 'win32'",
  "pytest",
  "pytest-benchmark",
  "pytest-memray; sys_platform != 'win32'",
]
test-typing = [
  "mypy",
  "pyright",
  "pytest",
]
test-unit = [
  "attrs",
  "coverage",
  "eval-type-backport; python_version < '3.10'",
  "msgpack",
  "pytest",
  "pyyaml",
  "tomli; python_version < '3.11'",
  "tomli-w",
]

[tool.setuptools]
packages = ["msgspec"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.exclude-package-data]
msgspec = [
  "*.c",
  "*.h",
]

[tool.setuptools_scm]
version_file = "src/msgspec/_version.py"
parentdir_prefix_version = "msgspec-"

[tool.uv.config-settings]
editable_mode = "compat"

[tool.ruff]
extend-exclude = [
  "*.pyi",
  "__init__.py",
  "src/msgspec/_version.py",
  "basic_typing_examples.py",
  "json.py",
  "msgpack.py",
  "test_JSONTestSuite.py",
  "conf.py",
  # TODO: remove when this when we drop support for Python 3.9 (example uses match statements)
  "examples/asyncio-kv/kv.py",
]
line-length = 88

[tool.ruff.lint]
ignore = [
  "E721", # Comparing types instead of isinstance
  "E741", # Ambiguous variable names
  "E501", # Conflicts with ruff format
  "W191", # Conflicts with ruff format
]
select = [
  "E", # PEP8 Errors
  "F", # Pyflakes
  "W", # PEP8 Warnings
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.codespell]
skip = "./site,./.venv,*.py,*.c,*.h"

[tool.coverage.run]
source_pkgs = ["msgspec"]
source_dirs = ["tests/unit"]
omit = [
  "src/msgspec/_version.py",
]

[tool.coverage.paths]
msgspec = [
  "src/msgspec",
  "*/msgspec/src/msgspec",
  "*/msgspec/dev/*/venvs/*/lib*/python*/site-packages/msgspec",
  "*\\msgspec\\dev\\*\\venvs\\*\\Lib\\site-packages\\msgspec",
]
tests = [
  "tests/unit",
  "*/msgspec/tests/unit",
]

[tool.pytest.ini_options]
testpaths = [
  # The order here determines the order in which tests are run.
  "tests/unit",
  "tests/typing",
]
filterwarnings = [
  "error",
]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-* cp314t-*"
build-frontend = "build[uv]"
test-command = "pytest {project}/tests/unit"
test-groups = ["test-unit"]

[tool.cibuildwheel.environment]
CFLAGS = "-g0"

[tool.cibuildwheel.linux]
environment-pass = ["CFLAGS"]
